--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,10 +28,21 @@ import Layout from "../layouts/Layout.astro"
 	  
 		<!-- Navigation Buttons -->
 		<button id="prev" class="absolute top-1/2 left-4 -translate-y-1/2 bg-gray-800 text-white p-2 rounded-full opacity-50 hover:opacity-100 z-10">
-		  &#9664;
+			<svg xmlns="http://www.w3.org/2000/svg" width="24"
+			 height="24" viewBox="0 0 24 24" fill="none" 
+			 stroke="currentColor" stroke-width="2" stroke-linecap="round"
+			  stroke-linejoin="round" class="lucide lucide-chevron-left">
+			  <path d="m15 18-6-6 6-6"/>
+			</svg>
 		</button>
 		<button id="next" class="absolute top-1/2 right-4 -translate-y-1/2 bg-gray-800 text-white p-2 rounded-full opacity-50 hover:opacity-100 z-10">
-		  &#9654;
+			<svg xmlns="http://www.w3.org/2000/svg" 
+			width="24" height="24" viewBox="0 0 24 24" 
+			fill="none" stroke="currentColor" stroke-width="2"
+			 stroke-linecap="round" stroke-linejoin="round" 
+			 class="lucide lucide-chevron-right">
+			 <path d="m9 18 6-6-6-6"/>
+			</svg>
 		</button>
 	  </div>
 	  
