--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -89,7 +89,7 @@ import Layout from "../layouts/Layout.astro"
 
         <!-- Text Section -->
         <div>
-            <p class="text-center text-2xl text-blue-800 px-4 md:px-24">
+            <p class="text-center text-2xl text-blue-800 px-4 md:px-96">
                 Sleepy Owl is a homegrown Indian coffee brand. We 
                 spend inordinately long making coffee that is as 
                 good as it can be in every single cup.
@@ -113,58 +113,63 @@ import Layout from "../layouts/Layout.astro"
   </div>
 
 <!-- coffee beans and coffee -->
-  <div class="bg-blue-300 max-w-screen-2xl mx-auto px-20">
-	<div class=" gap-8 flex mx-auto justify-center items-center py-8">
+ <!-- Ice Coffee and Filter -->
+ <div class="bg-blue-300 max-w-screen-2xl mx-auto px-4 sm:px-10 md:px-20">
+	<div class="grid grid-cols-2 md:grid-cols-3 gap-8 justify-center items-center py-8">
 	  <!-- Card 1 -->
-	  <div class="relative w-1/3">
+	  <div class="relative">
 		<img class="w-full h-auto" src="//sleepyowl.co/cdn/shop/files/img1.png?v=1630523731" alt="Hot Brew">
-		<p class="absolute inset-x-0 top-4 md:text-3xl text-amber-800 text-base font-semibold px-4 text-center">
+		<p class="absolute inset-x-0 top-4 text-xl md:text-3xl text-amber-800 font-semibold px-4 text-center">
 		  Hot Brew—Ready in 5 Minutes
 		</p>
 	  </div>
 	  <!-- Card 2 -->
-	  <div class="relative w-1/3">
+	  <div class="relative">
 		<img class="w-full h-auto" src="//sleepyowl.co/cdn/shop/files/img1.png?v=1630523731" alt="Hot Brew">
-		<p class="absolute inset-x-0 top-4 md:text-3xl text-blue-900 text-base font-semibold px-4 text-center">
+		<p class="absolute inset-x-0 top-4 text-xl md:text-3xl text-blue-900 font-semibold px-4 text-center">
 		  Cold Brew At Home
 		</p>
 	  </div>
 	  <!-- Card 3 -->
-	  <div class="relative w-1/3">
+	  <div class="relative">
 		<img class="w-full h-auto" src="//sleepyowl.co/cdn/shop/files/img1.png?v=1630523731" alt="Hot Brew">
-		<p class="absolute inset-x-0 top-4 md:text-3xl text-base font-semibold px-4 text-blue-950 text-center">
+		<p class="absolute inset-x-0 top-4 text-xl md:text-3xl text-blue-950 font-semibold px-4 text-center">
 		  Signature Arabica Coffee Beans
 		</p>
 	  </div>
 	</div>
   </div>
+  
+  
 
-  <!-- ice coffee  and filter coffee -->
-  <div class="bg-blue-300 max-w-screen-2xl mx-auto px-20">
-	<div class=" gap-8 flex mx-auto justify-center items-center py-8">
+<!-- Ice Coffee and Filter -->
+<div class="bg-blue-300 max-w-screen-2xl mx-auto px-4 sm:px-10 md:px-20">
+	<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 py-8">
 	  <!-- Card 1 -->
-	  <div class="relative w-1/3">
+	  <div class="relative w-full mx-auto">
 		<img class="w-full h-auto" src="//sleepyowl.co/cdn/shop/files/img1.png?v=1630523731" alt="Hot Brew">
-		<p class="absolute inset-x-0 top-4 md:text-3xl text-amber-800 text-base font-semibold px-4 text-center">
+		<p class="absolute inset-x-0 top-4 text-xl md:text-3xl text-amber-800 font-semibold px-4 text-center">
 		  Hot Brew—Ready in 5 Minutes
 		</p>
 	  </div>
 	  <!-- Card 2 -->
-	  <div class="relative w-1/3">
+	  <div class="relative w-full mx-auto">
 		<img class="w-full h-auto" src="//sleepyowl.co/cdn/shop/files/img1.png?v=1630523731" alt="Hot Brew">
-		<p class="absolute inset-x-0 top-4 md:text-3xl text-blue-900 text-base font-semibold px-4 text-center">
+		<p class="absolute inset-x-0 top-4 text-xl md:text-3xl text-blue-900 font-semibold px-4 text-center">
 		  Cold Brew At Home
 		</p>
 	  </div>
 	  <!-- Card 3 -->
-	  <div class="relative w-1/3">
+	  <div class="relative w-full mx-auto">
 		<img class="w-full h-auto" src="//sleepyowl.co/cdn/shop/files/img1.png?v=1630523731" alt="Hot Brew">
-		<p class="absolute inset-x-0 top-4 md:text-3xl text-base font-semibold px-4 text-blue-950 text-center">
+		<p class="absolute inset-x-0 top-4 text-xl md:text-3xl text-blue-950 font-semibold px-4 text-center">
 		  Signature Arabica Coffee Beans
 		</p>
 	  </div>
 	</div>
   </div>
+  
+  
   
 
   
