Refactor header and index layout for improved responsiveness and visual clarity

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<nav class="bg-slate-300 flex fixed top-0 w-full justify-between items-center p-3 px-8 md:px-32 z-20 ">
+<nav class="bg-slate-300 flex fixed top-0 w-full md:w-screen justify-between items-center p-3 px-8 md:px-32 z-20 ">
     <!-- Logo Section -->
     <div>
         <a href="/">
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Navigation Links -->
-    <div class="ml-auto flex gap-10 pr-8 md:flex relative">
+    <div class="ml-auto flex gap-10 md:pr-8 md:flex relative">
         <div class="flex gap-1 relative group">
             <button id="shop" class="font-bold flex items-center">
                 SHOP
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <ul class="flex gap-5">
+        <ul class="md:flex gap-5 hidden ">
             <li class="nav-link text-lg font-semibold">
                 <a href="#" class="hover:text-blue-500 duration-300">Instant Coffee</a>
             </li>
