Replace logo image and update carousel slide images; remove unused image file

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@
     <!-- Logo Section -->
     <div>
         <a href="/">
-            <img class="w-14 h-16" src="https://picsum.photos/200" alt="Logo">
+            <img class="w-28" src="/assets/images/logo/caffia.png" alt="Caffia Logo">
         </a>
     </div>
 
