--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,24 +4,24 @@ import Layout from "../layouts/Layout.astro"
 ---
 
 <Layout>
-	<div id="default-carousel" class="relative mt-20">
+	<div id="default-carousel" class="relative">
 		<!-- Carousel container -->
 		<div class="relative overflow-hidden">
 		  <!-- Container for all slides (with transition applied) -->
-		  <div class="carousel-slide flex transition-transform duration-1000 ease-in-out">
+		  <div class="carousel-slide flex transition-transform duration-1000 ease-in-out mt-16">
 			<!-- Slide 1 -->
-			<div class="flex-shrink-0 w-full relative">
-			  <img class="w-full h-full object-cover absolute" src="//sleepyowl.co/cdn/shop/files/Instant_Hero_Desktop_Dec_24.jpg?v=1734583546" alt="Slide 1">
+			<div class="flex-shrink-0 w-full  relative">
+			  <img class="w-full h-[570px] object-cover" src="/assets/images/banner/home_banner_1.jpeg" alt="Slide 1">
 			  <a class="absolute top-40 left-4 text-white bg-black p-2 rounded" href="#">Shop Now</a> <!-- Button positioned left on the first slide -->
 			</div>
 			<!-- Slide 2 -->
 			<div class="flex-shrink-0 w-full relative">
-			  <img class="w-full h-full object-cover" src="//sleepyowl.co/cdn/shop/files/TM_FR_48_Desk_v2.jpg?v=1713878000" alt="Slide 2">
+			  <img class="w-full h-full object-cover" src="/assets/images/banner/home_banner_1.jpeg" alt="Slide 2">
 			  <a class="absolute top-40 left-1/2 transform -translate-x-1/2 text-white bg-black p-2 rounded" href="#">Shop Now</a> <!-- Button centered on the second slide -->
 			</div>
 			<!-- Slide 3 -->
 			<div class="flex-shrink-0 w-full relative">
-			  <img class="w-full h-full object-cover" src="//sleepyowl.co/cdn/shop/files/Desktop_Hero_1__2.jpg?v=1712220135" alt="Slide 3">
+			  <img class="w-full h-full object-cover" src="/assets/images/banner/home_banner_1.jpeg" alt="Slide 3">
 			  <a class="absolute top-40 right-4 text-white bg-black p-2 rounded" href="#">Shop Now</a> <!-- Button positioned right on the third slide -->
 			</div>
 		  </div>
