--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,19 +11,19 @@ import Layout from "../layouts/Layout.astro"
 		  <div class="carousel-slide flex transition-transform duration-1000 ease-in-out mt-16">
 			<!-- Slide 1 -->
 			<div class="flex-shrink-0 w-full  relative">
-			  <img class="w-full h-[570px] object-cover" src="/assets/images/banner/home_banner_1.jpeg" alt="Slide 1">
+			  <img class="w-full h-[570px] object-top bg-cover " src="/assets/images/banner/home_banner_1.jpeg" alt="Slide 1">
 			  <a class="absolute top-40 left-4 text-white bg-black p-2 rounded" href="#">Shop Now</a> <!-- Button positioned left on the first slide -->
 			</div>
 			<!-- Slide 2 -->
-			<div class="flex-shrink-0 w-full relative">
-			  <img class="w-full h-full object-cover" src="/assets/images/banner/home_banner_1.jpeg" alt="Slide 2">
-			  <a class="absolute top-40 left-1/2 transform -translate-x-1/2 text-white bg-black p-2 rounded" href="#">Shop Now</a> <!-- Button centered on the second slide -->
-			</div>
+			<div class="flex-shrink-0 w-full  relative">
+				<img class="w-full h-[570px] object-top bg-cover " src="/assets/images/banner/home_banner_1.jpeg" alt="Slide 1">
+				<a class="absolute top-40 left-4 text-white bg-black p-2 rounded" href="#">Shop Now</a> <!-- Button positioned left on the first slide -->
+			  </div>
 			<!-- Slide 3 -->
-			<div class="flex-shrink-0 w-full relative">
-			  <img class="w-full h-full object-cover" src="/assets/images/banner/home_banner_1.jpeg" alt="Slide 3">
-			  <a class="absolute top-40 right-4 text-white bg-black p-2 rounded" href="#">Shop Now</a> <!-- Button positioned right on the third slide -->
-			</div>
+			<div class="flex-shrink-0 w-full  relative">
+				<img class="w-full h-[570px] object-top bg-cover " src="/assets/images/banner/home_banner_1.jpeg" alt="Slide 1">
+				<a class="absolute top-40 left-4 text-white bg-black p-2 rounded" href="#">Shop Now</a> <!-- Button positioned left on the first slide -->
+			  </div>
 		  </div>
 		</div>
 	  
