--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+  font-family: "montserrat", sans-serif;
+}
+*{
+  font-family: "Roboto", sans-serif;
+}
+
 h2{
     font-size: 45px !important;
     font-weight: 700 !important;
