Add About and Contact pages with layout and placeholder content

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -42,7 +42,7 @@
         <div class="flex justify-between gap-28">
         <ul class="md:flex gap-5 hidden ">
             <li class="relative group">
-                <a href="#" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">
+                <a href="/about-us/" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">
                     About Us
                 </a>
             </li>
@@ -56,7 +56,7 @@
                 <a href="#" class="text-white hover:text-BrandyPunch duration-300">Bulk Orders</a>
             </li> -->
             <li class="relative group">
-                <a href="#" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">
+                <a href="/contact-us/" class="text-lg font-semibold text-white hover:text-BrandyPunch duration-300">
                     Contact Us
                 </a>
             </li>
