--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ import Footer from "../components/Footer1.astro";
   <body>
     <Header />
     <slot />
-    <a href="https://wa.me/9987545874?text=Hello%20caffia!" class="" target="_blank">
+    <a href="https://wa.me/9987545874?text=Hello%20caffia!%20👋" class="" target="_blank">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         class="w-16 h-16 fixed bottom-4 right-4 z-10 fill-[#00a884]"
