--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -12,4 +12,25 @@ import Layout from "../layouts/Layout.astro";
    
     </div>
     </div>
+    <div>
+       <form action="" method="post">
+        <div>
+            
+        </div>
+       </form>
+    </div>
+
+    <div class="flex justify-center my-10">
+        <div class="w-full max-w-4xl h-0 pb-[56.25%] relative px-4  "> 
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.129311926005!2d72.83656210000001!3d19.1458161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b709597cfd03%3A0x608cc435cbfb8cd1!2sSnow%20Waffle!5e0!3m2!1sen!2sin!4v1742001031161!5m2!1sen!2sin" 
+                class="absolute top-0 left-0 w-full md:w-[60rem] md:h-[30rem] h-full border-0"
+                allowfullscreen 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </div>
+    
+    
 </Layout>
