Add HeaderBanner component and integrate it into About and Contact pages; enhance Tailwind CSS configuration with new animations

--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -1,15 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import HeaderBanner from "../components/HeaderBanner.astro";
 ---
 <Layout>
-    <div class="w-screen bg-BrandyPunch">
-    <h1 class="text-center mt-16">About Page</h1>
-    <h2 class=" text-center"> Under Maintanense</h2>
-    <div class="flex justify-center ">
-        <img src="https://img.freepik.com/free-vector/software-code-testing-concept-illustration_114360-8414.jpg?t=st=1741523164~exp=1741526764~hmac=3a37b32729a0dbc8d7e1db3dfb4aa9c37687880999cf1d0cfd3dbd45fae323ac&w=740" 
-        alt="Software Code Testing Illustration"
-        class="w-[450px] h-[450px] rounded object-cover py-10">
-   
-    </div>
-    </div>
+    <HeaderBanner src="/assets/images/about/about_banner1.webp" 
+      title="About Caffia" 
+      description="Born from a love for coffee, Caffia is dedicated to delivering rich, bold flavors with every sip. Whether you crave a strong espresso or a smooth latte, our carefully curated blends ensure the perfect coffee moment." 
+      />
 </Layout>
